# chipp-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHIPP_API_RESEARCH.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  justfile  release-please-config.json
.augment/: README.md
.augment/agents/: README.md  code-review-engineer.md  code-review-pm.md  code-review-qa.md
.augment/commands/: cleanup-temporary-analyses.md  code-review.md  create-prompt.md  heal-docs.md  heal-rules.md  run-prompt.md
.augment/rules/: 00-chipp-rs-core.md  00-sdk-core.md  10-library-publishing.md  50-rust-sdk-patterns.md  60-architecture-decisions.md  65-tdd-enforcement.md  70-teaching-mode.md  80-code-quality-assessment.md  80-prompt-engineering.md  90-documentation-cleanup.md  chipp-api-integration.md
.claude/commands/: create-pr.md
.github/workflows/: ci.yml  release-please.yml  release.yml
examples/: error_handling.rs  session.rs  simple.rs  streaming.rs
prompts/: 001-chipp-rs-review-and-next-steps.md  002-tdd-coverage-improvement.md  003-test-plan-coverage-gaps.md  004-tdd-implementation-guide.md
scripts/: check-quality.sh
src/: client.rs  config.rs  error.rs  lib.rs  stream.rs  types.rs
tests/: integration_test.rs  unit_tests.rs
tests/unit/: chat_tests.rs  client_health_tests.rs  client_new_tests.rs  config_tests.rs  mod.rs  security_tests.rs  streaming_tests.rs  types_tests.rs
